--- a/Hardware_Requirement.html
+++ b/Hardware_Requirement.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pronov Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>pronov user's guide and Documentation</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -15,23 +12,22 @@
             <ul>
                 <li><a href="http://#">Home</a></li>
                 <li><a href="http://#">Documentation</a></li>
-                <li><a href="http://#">Discusion</a></li>
             </ul>
         </div>
 
     </div>
-    <div id="Content">
+    <div id="container">
 
-        <div>
-            <nav id="menu">
+        <div id="leftCol">
+            <nav>
                 <h3>Getting started</h3>
                 <ul>
-                    <li><a href="onclick=" document.getElementById( "Heading").innerHTML="">Welcome</a></li>
+                    <li><a href="index.html">Welcome</a></li>
                 </ul>
                 <h3>System Requirement</h3>
                 <ul>
-                    <li><a href="Hardware_Requirement.php">Hardware Requirement</a></li>
-                    <li><a href="software_requirement.php">Software Requirement</a></li>
+                    <li><a href="Hardware_Requirement.html">Hardware Requirement</a></li>
+                    <li><a href="software_requirement.html">Software Requirement</a></li>
                 </ul>
                 <h3>Inventory Management</h3>
                 <ul>
@@ -72,4 +68,37 @@
                     <li><a href="#">Manage</a></li>
                 </ul>
             </nav>
+
         </div>
+        <div id="centerCol">
+            <h1>Hardware Requirement</h1><br>
+            <hr>
+            <p><strong>Any system to be used must preferably have the following configuration:</strong></p><br>
+            <ul>
+                <li>A colour monitor with a minimum resolution of 1280 X 800 pixels, preferably an LCD screen</li>
+                <li>A 3GHz processor and above</li>
+                <li>A 3GB memory (RAM) or above.</li>
+                <li>A minimum of 256GB hard disk space.</li>
+                <li>A PS/2 port keyboard or a compatible</li>
+                <li>A Microsoft mouse or any compatible</li>
+            </ul>
+
+        </div>
+    </div>
+</body>
+
+</html>
+
+
+
+
+
+<br><br>
+
+
+</div>
+
+</div>
+</body>
+
+</html>
