--- a/Hardware_Requirement.html
+++ b/Hardware_Requirement.html
@@ -31,24 +31,18 @@
                 </ul>
                 <h3>Inventory Management</h3>
                 <ul>
-                    <li><a href="#">Register</a></li>
-                    <li><a href="#">Add</a></li>
-                    <li><a href="#">Manage</a></li>
-                </ul>
-                <h3>Inventory Management</h3>
-                <ul>
-                    <li><a href="#">Register</a></li>
-                    <li><a href="#">Add</a></li>
-                    <li><a href="#">Manage</a></li>
+                    <li><a href="inventory_register.html">Register</a></li>
+                    <li><a href="inventory_add.html">Add</a></li>
+                    <li><a href="inventory_manage.html">Manage</a></li>
                 </ul>
                 <h3>Store Management</h3>
                 <ul>
-                    <li><a href="#">Add</a></li>
-                    <li><a href="#">Manage</a></li>
+                    <li><a href="add_store.html">Add</a></li>
+                    <li><a href="manage_store.html">Manage</a></li>
                 </ul>
                 <h3>Configuration</h3>
                 <ul>
-                    <li><a href="#">Add</a></li>
+                    <li><a href="add_configuration.html">Add</a></li>
                     <li><a href="#">Manage</a></li>
                     <li><a href="#">Search</a></li>
                 </ul>
