--- a/add_configuration.html
+++ b/add_configuration.html
@@ -65,17 +65,11 @@
 
         </div>
         <div id="centerCol">
-            <h1>Software Requirement</h1><br>
+            <h1>Add Configuration</h1><br>
             <hr>
-            <p><strong>Any system to be used must preferably have the following Software configuration:</strong></p>
-            <ul>
-                <p>
-                    <li> Minimum of windows XP operating system and any other operating system must be installed and running on the computers.</li>
-                    <li> Any web browser to display the web pages as they are handed over from the application server.</li>
-                    <li> Java runtime Environment to handle the desktop version </li>
-                </p>
-            </ul>
-            With all these in place, ProNov Application would work effectively and give the best of result.
+            <p>This submenu allows you to explore existing product catefory and create a new category of product that does not exist in the database by adding the category name and description of the kinds of goods to be found in such category. </p>
+            <p> Only user with the Add permission have access to this menu. Below is the screenshot of the Add category submenu page.</p>
+            <div><img src="#" alt="screenshort of the configuration page would be here"></div>
 
         </div>
     </div>
