--- a/add_store.html
+++ b/add_store.html
@@ -65,19 +65,30 @@
 
         </div>
         <div id="centerCol">
-            <h1>Software Requirement</h1><br>
+            <h1>Add New Store</h1><br>
             <hr>
-            <p><strong>Any system to be used must preferably have the following Software configuration:</strong></p>
+            <p><strong>Adding new pharmaceutical store allows you to register a new dtore in to the database. it is divided into three sub category. This include:</strong></p>
             <ul>
                 <p>
-                    <li> Minimum of windows XP operating system and any other operating system must be installed and running on the computers.</li>
-                    <li> Any web browser to display the web pages as they are handed over from the application server.</li>
-                    <li> Java runtime Environment to handle the desktop version </li>
+                    <li>Basic Details: This allows the user to enter the basic details such as (name, address and phone number) of the stock owner. </li>
+                    <div>
+                        <img src="#" alt="screenshot of the store owners basic details page"><br>
+                        <i>Screenshot of the phone verification phase</i>
+                    </div>
+                    <li> Phone Verification: This is the second phase of the new store set-up phase. The Admin enters the verification code as sent to the user’s phone</li>
+                    <div>
+                        <img src="#" alt="screenshot of the store owners phone verification page Here"><br>
+                        <i>Screenshot of the phone verification phase</i>
+                    </div>
+                    <li>Business info: This is the last phase of the stores set-up and it allows the user to add the details of the store such as name, address, branch names and address.</li>
+                    <div>
+                        <img src="#" alt="screenshot of the store owners basic details page here"><br>
+                        <i>Screenshot of the Business Info Registration page</i>
+                    </div>
                 </p>
             </ul>
-            With all these in place, ProNov Application would work effectively and give the best of result.
-
         </div>
+
     </div>
 </body>
 
