--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav>
                 <h3>Getting started</h3>
                 <ul>
-                    <li><a href="index.html">Welcome</a></li>
+                    <li class="current"><a href="index.html">Welcome</a></li>
                 </ul>
                 <h3>System Requirement</h3>
                 <ul>
@@ -42,24 +42,18 @@
                 </ul>
                 <h3>Inventory Management</h3>
                 <ul>
-                    <li><a href="#">Register</a></li>
-                    <li><a href="#">Add</a></li>
-                    <li><a href="#">Manage</a></li>
-                </ul>
-                <h3>Inventory Management</h3>
-                <ul>
-                    <li><a href="#">Register</a></li>
-                    <li><a href="#">Add</a></li>
-                    <li><a href="#">Manage</a></li>
+                    <li><a href="inventory_register.html">Register</a></li>
+                    <li><a href="inventory_add.html">Add</a></li>
+                    <li><a href="inventory_manage.html">Manage</a></li>
                 </ul>
                 <h3>Store Management</h3>
                 <ul>
-                    <li><a href="#">Add</a></li>
-                    <li><a href="#">Manage</a></li>
+                    <li><a href="add_store.html">Add</a></li>
+                    <li><a href="manage_store.html">Manage</a></li>
                 </ul>
                 <h3>Configuration</h3>
                 <ul>
-                    <li><a href="#">Add</a></li>
+                    <li><a href="add_configuration.html">Add</a></li>
                     <li><a href="#">Manage</a></li>
                     <li><a href="#">Search</a></li>
                 </ul>
@@ -82,8 +76,8 @@
 
         </div>
         <div id="centerCol">
-            <div style="background-color:rgb(255, 253, 253);text-align:center;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
-                <h1>Welcome</h1><br>
+            <div style="background-color:rgb(255, 253, 253);font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
+                <h1>Welcome</h1>
                 <hr>
                 <p>Information is essential to management. Collecting, processing and disseminating information may seems costly, </p>
                 <p>but the cost of developing and maintaining an information system should be balanced </p>
