--- a/inventory_manage.html
+++ b/inventory_manage.html
@@ -37,12 +37,12 @@
                 </ul>
                 <h3>Store Management</h3>
                 <ul>
-                    <li><a href="add_store.html">Add</a></li>
-                    <li><a href="manage_store.html">Manage</a></li>
+                    <li><a href="add_configuration.html">Add</a></li>
+                    <li><a href="#">Manage</a></li>
                 </ul>
                 <h3>Configuration</h3>
                 <ul>
-                    <li><a href="add_configuration.html">Add</a></li>
+                    <li><a href="#">Add</a></li>
                     <li><a href="#">Manage</a></li>
                     <li><a href="#">Search</a></li>
                 </ul>
@@ -65,18 +65,10 @@
 
         </div>
         <div id="centerCol">
-            <h1>Software Requirement</h1><br>
+            <h1>Manage Inventory</h1><br>
             <hr>
-            <p><strong>Any system to be used must preferably have the following Software configuration:</strong></p>
-            <ul>
-                <p>
-                    <li> Minimum of windows XP operating system and any other operating system must be installed and running on the computers.</li>
-                    <li> Any web browser to display the web pages as they are handed over from the application server.</li>
-                    <li> Java runtime Environment to handle the desktop version </li>
-                </p>
-            </ul>
-            With all these in place, ProNov Application would work effectively and give the best of result.
-
+            <!-- <p><strong>Any system to be used must preferably have the following configuration:</strong></p><br> -->
+            <img src="img/page_under_construction.jpg" alt="under C" width="71%">
         </div>
     </div>
 </body>
