--- a/inventory_register.html
+++ b/inventory_register.html
@@ -37,12 +37,12 @@
                 </ul>
                 <h3>Store Management</h3>
                 <ul>
-                    <li><a href="add_store.html">Add</a></li>
-                    <li><a href="manage_store.html">Manage</a></li>
+                    <li><a href="add_configuration.html">Add</a></li>
+                    <li><a href="#">Manage</a></li>
                 </ul>
                 <h3>Configuration</h3>
                 <ul>
-                    <li><a href="add_configuration.html">Add</a></li>
+                    <li><a href="#">Add</a></li>
                     <li><a href="#">Manage</a></li>
                     <li><a href="#">Search</a></li>
                 </ul>
@@ -65,20 +65,45 @@
 
         </div>
         <div id="centerCol">
-            <h1>Software Requirement</h1><br>
+            <h1>Inventory Register</h1><br>
             <hr>
-            <p><strong>Any system to be used must preferably have the following Software configuration:</strong></p>
-            <ul>
+            <p>This submenu gives you the access to register new inventory. The Data required is divided into three face which are:</p><br>
+            <ol>
                 <p>
-                    <li> Minimum of windows XP operating system and any other operating system must be installed and running on the computers.</li>
-                    <li> Any web browser to display the web pages as they are handed over from the application server.</li>
-                    <li> Java runtime Environment to handle the desktop version </li>
+                    <li> Basic Data: This data is compulsory and it’s the first step needed to be filled. All the details on this page are marked compulsory and must be filled before proceeding to the next phase. Below is the screenshot of the basic data session
+                        of the register inventory page.</li>
                 </p>
-            </ul>
-            With all these in place, ProNov Application would work effectively and give the best of result.
 
+                <img src="#" alt="screen shot of inventory basic data page">
+
+                <p>
+                    <li>More Info: This is the second stage of register inventory page. This page contains additional information on the inventory and its optional ( filling it is not compulsory).</li>
+                </p>
+
+                <img src="#" alt="screen shot of inventory register more info page">
+
+                <p>
+                    <li>Meta Data: This is the last stage of register inventory page. This also contains textboxes and appropriate label for each textboxes. It’s optional but it gives details information about</li>
+                </p>
+
+                <img src="#" alt="screen shot of inventory register-Meta Data info page">
+            </ol>
         </div>
     </div>
+</body>
+
+</html>
+
+
+
+
+
+<br><br>
+
+
+</div>
+
+</div>
 </body>
 
 </html>
