--- a/inventory_add.html
+++ b/inventory_add.html
@@ -65,20 +65,27 @@
 
         </div>
         <div id="centerCol">
-            <h1>Software Requirement</h1><br>
+            <h1>Add Inventory</h1><br>
             <hr>
-            <p><strong>Any system to be used must preferably have the following Software configuration:</strong></p>
-            <ul>
-                <p>
-                    <li> Minimum of windows XP operating system and any other operating system must be installed and running on the computers.</li>
-                    <li> Any web browser to display the web pages as they are handed over from the application server.</li>
-                    <li> Java runtime Environment to handle the desktop version </li>
-                </p>
-            </ul>
-            With all these in place, ProNov Application would work effectively and give the best of result.
+            <!-- <p><strong>Any system to be used must preferably have the following configuration:</strong></p><br> -->
+            <img src="img/page_under_construction.jpg" alt="under C" width="71%">
 
         </div>
     </div>
+</body>
+
+</html>
+
+
+
+
+
+<br><br>
+
+
+</div>
+
+</div>
 </body>
 
 </html>
