--- a/manage_store.html
+++ b/manage_store.html
@@ -65,17 +65,9 @@
 
         </div>
         <div id="centerCol">
-            <h1>Software Requirement</h1><br>
+            <h1>Manage Store</h1><br>
             <hr>
-            <p><strong>Any system to be used must preferably have the following Software configuration:</strong></p>
-            <ul>
-                <p>
-                    <li> Minimum of windows XP operating system and any other operating system must be installed and running on the computers.</li>
-                    <li> Any web browser to display the web pages as they are handed over from the application server.</li>
-                    <li> Java runtime Environment to handle the desktop version </li>
-                </p>
-            </ul>
-            With all these in place, ProNov Application would work effectively and give the best of result.
+            <div><img src="img/page_under_construction.jpg" alt=""></div>
 
         </div>
     </div>
