--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav class="navbar navbar-inverse bg-inverse">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="#">
-                            <img alt="ProNov Logo" src="ProNov.png" height="50px;" width="50px">
+                            <img alt="ProNov Logo" src="img/ProNov.png" height="50px;" width="50px">
                         </a>
                         <a href="#" class="btn btn-default" role="button" style="color: white;">Home</a>
                         <a href="#" class="btn btn-default" role="button" style="color: white;">Documentation</a>
