--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                                 
                                 <a href="#" class="btn btn-default" role="button" style="color: white;" onmouseover="changedColor(this)" onmouseout="normalColor(this)"> Dashboard </a>
                                 <a href="#" class="btn btn-default" role="button" style="color: white;" onmouseover="changedColor(this)" onmouseout="normalColor(this)"> Log In </a>
+                                <a href="#" class="btn btn-default" role="button" style="color: white;" onmouseover="changedColor(this)" onmouseout="normalColor(this)"> Sign Up </a>
                             </div>
 
                         <script>
@@ -317,9 +318,8 @@
             <div id="footer" style="padding-top:0.2%; padding-bottom:0.1; padding-right:2%; background-color:#4B8F4B; color:whitesmoke; height:30px;">
                     <footer style="text-align:center; font-size: 15px; ">
                         <p class="pull-right"><a href="#" style="color:#1F3F1F;">Developed by Team ProNov</a></p>
-                        <p>&copy; 2017  <a href="https://loftyincltd.biz/" target="_blank"> LoftyInc Allied Partners </a> and 
-                            <a href="website.pronov.co/" target="_blank"> ProNov </a> </p>
-                        <p><a href="#">Privacy</a> &middot; <a href="#">Terms</a> All right reserved</p>
+                        <p style="color:silver;">&copy; 2017  <a style="color:silver; text-decoration:none;" href="https://loftyincltd.biz/" target="_blank"> LoftyInc Allied Partners </a> </p>
+                        <p style="color:silver"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> All right reserved</p>
                     </footer>
                 </div>
                 <!-- End of footer -->
