--- a/add_configuration.html
+++ b/add_configuration.html
@@ -1,78 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<head>
-    <title>pronov user's guide and Documentation</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
+        <link rel="icon" type="image/png" href="img\ProNov.png">
+        <title>pronov user's guide and Documentation</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 <body>
-    <div id="Header">
-        <div id="HeaderInside">
-            <ul>
-                <li><a href="http://#">Home</a></li>
-                <li><a href="http://#">Documentation</a></li>
-            </ul>
-        </div>
 
+    <div>
+        <h6 class="display-3">Add Configuration</h6>
+        <hr>
+        <p class="config">This submenu allows you to explore existing product category and create a new category of product that does not exist in the database by adding the category name and description of the kinds of goods to be found in such category. </p>
+        <p class="config"> Only user with the Add permission have access to this menu. Below is the screenshot of the Add category submenu page.</p>
+        
+        <div><img src="#" alt="screenshort of the configuration page would be here"></div>
     </div>
-    <div id="container">
 
-        <div id="leftCol">
-            <nav>
-                <h3>Getting started</h3>
-                <ul>
-                    <li><a href="index.html">Welcome</a></li>
-                </ul>
-                <h3>System Requirement</h3>
-                <ul>
-                    <li><a href="Hardware_Requirement.html">Hardware Requirement</a></li>
-                    <li><a href="software_requirement.html">Software Requirement</a></li>
-                </ul>
-                <h3>Inventory Management</h3>
-                <ul>
-                    <li><a href="inventory_register.html">Register</a></li>
-                    <li><a href="inventory_add.html">Add</a></li>
-                    <li><a href="inventory_manage.html">Manage</a></li>
-                </ul>
-                <h3>Store Management</h3>
-                <ul>
-                    <li><a href="add_store.html">Add</a></li>
-                    <li><a href="manage_store.html">Manage</a></li>
-                </ul>
-                <h3>Configuration</h3>
-                <ul>
-                    <li><a href="add_configuration.html">Add</a></li>
-                    <li><a href="#">Manage</a></li>
-                    <li><a href="#">Search</a></li>
-                </ul>
-                <h3>Groups</h3>
-                <ul>
-                    <li><a href="#">Add</a></li>
-                    <li><a href="#">Manage</a></li>
-                </ul>
-                <h3>Permissions</h3>
-                <ul>
-                    <li><a href="#">Add</a></li>
-                    <li><a href="#">Manage</a></li>
-                </ul>
-                <h3>Users</h3>
-                <ul>
-                    <li><a href="#">Invite</a></li>
-                    <li><a href="#">Manage</a></li>
-                </ul>
-            </nav>
 
-        </div>
-        <div id="centerCol">
-            <h1>Add Configuration</h1><br>
-            <hr>
-            <p>This submenu allows you to explore existing product catefory and create a new category of product that does not exist in the database by adding the category name and description of the kinds of goods to be found in such category. </p>
-            <p> Only user with the Add permission have access to this menu. Below is the screenshot of the Add category submenu page.</p>
-            <div><img src="#" alt="screenshort of the configuration page would be here"></div>
-
-        </div>
-    </div>
 </body>
-
 </html>
