--- a/add_groups.html
+++ b/add_groups.html
@@ -14,16 +14,12 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
-
     <div>
-        <h6 class="display-3">Add Configuration</h6>
+        <h6 class="display-3">Add Groups</h6>
         <hr>
-        <p class="config">This submenu allows you to explore existing product category and create a new category of product that does not exist in the database by adding the category name and description of the kinds of goods to be found in such category. </p>
+        <p class="config">This submenu allows you to explore existing product category and create a new category of product that does not exist in the database by adding the category name and description of the kinds of goods to be found in such category.</p>
         <p class="config"> Only user with the Add permission have access to this menu. Below is the screenshot of the Add category submenu page.</p>
-        
+                
         <div><img src="#" alt="screenshort of the configuration page would be here"></div>
     </div>
-
-
 </body>
-</html>
