--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Authors: LoftyInc Allied Partners Interns
-Project Duration: 4 weeks
+Location: Lagos, Nigeria
+Project Duration: 6 weeks
 Period: September 2017 - October 2017 -->
 
 
@@ -35,9 +36,10 @@ Period: September 2017 - October 2017 -->
                         
                 <div>
                     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-                        <a class="navbar-brand" href="#">
+                        <!-- <a class="navbar-brand" href="#">
                             <i class="fa fa-map-signs" aria-hidden="true"></i> 
-                            ProNOV Guide </a>
+                                ProNOV Guide 
+                        </a> -->
                             
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                             <ul class="navbar-nav mr-auto mt-2 mt-md-0">
@@ -392,7 +394,7 @@ Period: September 2017 - October 2017 -->
                     </p>
 
                     <p> 
-                        Developed by ProNov Interns &copy; 2017 
+                        Developed by ProNOV Interns &copy; 2017 
                         <a href="https://loftyincltd.biz/" target="_blank" style="color: black;"> LoftyInc Allied Partners </a> &middot; All right reserved &middot; 
                         <a  href="website.pronov.co/" target="_blank" style="color: black;"> Privacy </a> &middot; 
                         <a  href="website.pronov.co/" target="_blank" style="color: black; padding-top: -10px;"> Terms </a>
