New updates, some issues yet unsolved

--- a/access.html
+++ b/access.html
@@ -19,7 +19,7 @@
 
     <div class="access" id="registration">
                                 
-        <div class="access" id="step1" style="margin-bottom: 3%">
+        <div class="access" id="step1" style="margin-bottom: 3%;">
             <h3> Stage 1 </h3>
             <hr>
                 
@@ -47,7 +47,7 @@
 
         </div>
 
-        <div class="access" id="step2" style="margin-bottom: 3%">
+        <div class="access" id="step2" style="margin-bottom: 3%;">
             <h3 class="display-6"> Stage 2 </h3>
             <hr>
 
@@ -69,8 +69,8 @@
 
         </div>
 
-        <div class="access" id="step3" style="margin-bottom: 3%">
-            <h3 class="display-6" style="text-align: center; text-decoration: underline"> Stage 3 </h3>
+        <div class="access" id="step3" style="margin-bottom: 3%;">
+            <h3 class="display-6"> Stage 3 </h3>
             <hr>
 
             <div  class="row center-content-sm-center">
@@ -97,7 +97,7 @@
         </div>
 
         <div class="access" id="step4">
-            <h3 class="display-6" style="text-align: center; text-decoration: underline"> Stage 4 </h3>
+            <h3 class="display-6"> Stage 4 </h3>
             <hr>
 
             <div  class="row center-content-sm-center">  
