--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div>
 
-            <div style="padding: 0.5%; padding-left: 3%; background-color:#4B8F4B; font-size: 123%; color: white; font-family: candara">
+            <div style="padding: 0.5%; padding-left: 3%; background-color:#4B8F4B; font-size: 123%; color: white; font-family: vernada;">
                 <header role = "banner"> <img alt="ProNOV Logo" src="img\ProNov.png" height="6%;" width= "6%"; id="img"> 
                     ProNOV Documentation 
                 </header>
@@ -348,7 +348,7 @@
 
                         <div class="container-fluid">
 
-                            <div id="content" style="margin-top:1%; overflow-y:hidden; overflow-x:hidden;">                                            
+                            <div id="content" style="margin-top:1%;">                                            
                             <!-- <div id="content">                                             -->
                                 <h6 class="display-4" style="padding-left: 1%;"> Welcome! </h6>                            
                                                         
