The header image has been adjusted for mobile compatibility

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <div>
 
-            <div style="padding: 0.5%; padding-left: 3%; background-color:#4B8F4B; font-size: 123%; color: white; font-family: vernada;">
-                <header role = "banner"> <img alt="ProNOV Logo" src="img\ProNov.png" height="6%;" width= "6%"; id="img"> 
+            <div style="padding: 0.5%; padding-left: 3%; background-color:#4B8F4B; font-size: 115%; color: white; font-family: arial black">
+                <div role = "banner"> <img alt="ProNOV Logo" src="img\ProNov.png"  height="50px" width= "50px" id="img"> 
                     ProNOV Documentation 
-                </header>
+                </div>
             </div>           
                         
             <div>
