Final product almost ready, final merging today. All missing contents not yet available.

--- a/branches.html
+++ b/branches.html
@@ -19,7 +19,7 @@
 
     <body>
 
-        <div class="branch" id="add" class="infoDisplay" style="margin-bottom: 3%;">
+        <div class="branch" id="add" class="infoDisplay">
             <h3> Add </h3>
             <hr>
 
@@ -49,7 +49,7 @@
 
         </div>
             
-        <div class="branch" id="access" class="infoDisplay" style="margin-bottom: 3%;">
+        <div class="branch" id="access" class="infoDisplay">
             <h3> Access </h3>
             <hr>
 
@@ -74,6 +74,7 @@
             <hr >
 
             <div class="row center-content-sm-center">
+
                 <div class="col-sm-3">
                     <img src="img/branch_manage.png" width="93%" height="97%">
                 </div>
@@ -83,6 +84,7 @@
                         The section shows the list of the branch(es) that are registered on the App. The branch(es) can be accessed by tapping them and the branch registering process is done by tapping the "+" sign at the right bottom of the page. 
                     </p>
                 </div>
+                
             </div>
 
         </div>
