The Configuration has been fed its content

--- a/index.html
+++ b/index.html
@@ -331,33 +331,11 @@
                                                     <div class="card">
                                                         <div class="card-header" role="tab" id="headingNine">
                                                             <h6 class="mb-0">
-                                                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine" small class="text-muted">
+                                                                <a href="#" onclick="load_config()" small class="text-muted">
                                                                     <i class="fa fa-cog fa-fw" aria-hidden="true"></i> 
                                                                         Configuration
                                                                 </a>
                                                             </h6>
-                                                        </div>
-                                                
-                                                        <div id="collapseNine" class="collapse" role="tabpanel" aria-labelledby="headingNine">
-                                                            <ul class="list-group">
-                                                                <li class="list-group-item">
-                                                                    <a href="#" onclick="load_config()" class="h6"> 
-                                                                        <i class="fa fa-plus" aria-hidden="true"></i> 
-                                                                            Add 
-                                                                    </a>
-                                                                </li>
-                                                                <li class="list-group-item">
-                                                                    <a href="#" onclick="load_config1()" class="h6"> 
-                                                                        <i class="fa fa-puzzle-piece" aria-hidden="true"></i> 
-                                                                            Manage </a>
-                                                                </li>
-                                                                <li class="list-group-item">
-                                                                    <a href="#" onclick="load_config2()" class="h6"> 
-                                                                        <i class="fa fa-search" aria-hidden="true"></i> 
-                                                                            Search 
-                                                                    </a>
-                                                                </li>
-                                                            </ul>
                                                         </div>
                                                     </div>
                                     
