The Images have been made responsive

--- a/branches.html
+++ b/branches.html
@@ -24,7 +24,7 @@
         <div  class="row center-content-sm-center">
                         
             <div class="col-sm-3">
-                <img src="img/branch_add.png" width="93%" height="97%" >
+                <img src="img/branch_add.png" class="img-thumbnail" width="93%" height="97%" >
             </div>
                     
             <div class="col-sm-9">
@@ -60,7 +60,7 @@
             </div>
 
             <div class="col-sm-3">
-                <img src="img/branch_access.png" width="93%" height="97%">
+                <img src="img/branch_access.png" class="img-thumbnail" width="93%" height="97%">
             </div>
 
         </div>
@@ -73,7 +73,7 @@
 
         <div class="row center-content-sm-center">
             <div class="col-sm-3">
-                <img src="img/branch_manage.png" width="93%" height="97%">
+                <img src="img/branch_manage.png" class="img-thumbnail" width="93%" height="97%">
             </div>
 
             <div class="col-sm-9">
