--- a/config.html
+++ b/config.html
@@ -19,7 +19,7 @@
                 
         <div  class="row center-content-sm-center">    
             <div class="col-sm-3">                
-                <img src="img/config1.png" width="93%" height="97%" >
+                <img src="img/config1.png" class="img-thumbnail" width="93%" height="97%" >
             </div>
                     
             <div class="col-sm-9">
