Ready for use, feedback expected

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!-- Font-awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <link rel="icon" type="image/png" href="img\ProNov.png">
-        <title> ProNov Documentation </title>
+        <link rel="icon" type="image/png" href="img\ProNOV.png">
+        <title> ProNOV Documentation </title>
         <link rel="stylesheet" href="css/style.css">
         <script src="js/main.js"></script>
         <script src="js/btnInfo.js"></script>                    
@@ -27,7 +27,7 @@
         <div id="topNav">
 
             <header>
-                <div role = "banner"> <img alt="ProNOV Logo" src="img\ProNov.png" height="50" width= "50" id="img"> 
+                <div role = "banner"> <img alt="ProNOV Logo" src="img\ProNOV.png" height="50" width= "50" id="img"> 
                     ProNOV Documentation 
                 </div>
             </header>           
@@ -467,12 +467,7 @@
                     <a href="#"> Back to top </a>
                 </p>
 
-                <p> 
-                    Developed by ProNov Interns &copy; 2017 
-                    <a href="https://loftyincltd.biz/" target="_blank"> LoftyInc Allied Partners </a> &middot; All right reserved &middot; 
-                    <a href="website.pronov.co/" target="_blank"> Privacy </a> &middot; 
-                    <a href="website.pronov.co/" target="_blank"> Terms </a>
-                </p> 
+                <p> &copy; 2017 <a href="https://www.pronov.co" target="_blank"> ProNOV </a> &middot; All right reserved </p> 
                     
             </footer>
         </div>
