--- a/config.html
+++ b/config.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">            
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <link rel="icon" type="image/png" href="img\ProNov.png">
-        <title> ProNov Documentation </title>
+        <link rel="icon" type="image/png" href="img\ProNOV.png">
+        <title> ProNOV Documentation </title>
         <link rel="stylesheet" href="css/style.css">
         <script src="js/main.js"></script>
         <script src="js/btnInfo.js"></script>        
