--- a/inventory.html
+++ b/inventory.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <link rel="icon" type="image/png" href="img\ProNov.png">
-        <title> ProNov Documentation </title>
+        <link rel="icon" type="image/png" href="img\ProNOV.png">
+        <title> ProNOV Documentation </title>
         <link rel="stylesheet" href="css/style.css">
         <script src="js/main.js"></script>
         <script src="js/btnInfo.js"></script>        
@@ -107,7 +107,7 @@
                                 <li>Enter the Product Name or the Nafdac Number (e.g Paracetamol Inj 15ml)</li>
                                 <li>Enter the Product Manufacture Date (e.g 28th Oct, 2016)</li>
                                 <li>Enter the Product Expiry Date (e.g 28th Sept, 2018)</li>
-                                <li>Enter the Supplier of the Product (e.g PRONOV)</li>
+                                <li>Enter the Supplier of the Product (e.g ProNOV)</li>
                                 <li>Write a note to decribe the drug</li>
                                 <li>Enter the number of days the app should give an expiry alert before the main date (e.g 30)</li>
                                 <li>Enter the number of quantity the product must remain before the app give  a low stock alert (e.g 20)</li>
